style: Fix element sizes and alignment
- Corrected element sizes and alignment issues to ensure a consistent and visually appealing layout.
- Squash merge from the "feature/media-queries" branch.

--- a/src/index.css
+++ b/src/index.css
@@ -253,24 +253,10 @@ body {
   font-weight: 600;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 2.4rem;
 }
-
-/*.btn-add {*/
-/*  background-color: var(--color-primary);*/
-/*  color: var(--color-text);*/
-/*  border: none;*/
-/*  border-radius: 10rem;*/
-/*  font-size: 1.4rem;*/
-/*  padding: 1rem;*/
-/*  font-weight: bold;*/
-/*  cursor: pointer;*/
-/*  transition: all 0.3s;*/
-/*}*/
-
-/*.btn-add:hover {*/
-/*  background-color: var(--color-primary-light);*/
-/*}*/
 
 .seconds {
   background-color: var(--color-background-100);
@@ -281,23 +267,6 @@ body {
   padding: 0.4rem;
   margin-top: 2.4rem;
 }
-
-/*.btn-back {*/
-/*  top: 0.6rem;*/
-/*  left: 0.6rem;*/
-/*  height: 3.2rem;*/
-/*  aspect-ratio: 1;*/
-/*  !* background-color: var(--color-text); *!*/
-/*  background-color: #fff;*/
-/*  color: var(--color-background-500);*/
-/*  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);*/
-/*  font-family: sans-serif;*/
-/*  font-size: 2.4rem;*/
-/*  z-index: 9999;*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  justify-content: center;*/
-/*}*/
 
 .box::-webkit-scrollbar, .list::-webkit-scrollbar {
   display: none;
@@ -348,6 +317,8 @@ body {
   font-size: 1.4rem;
   padding: 1rem;
   transition: all 0.3s;
+
+  align-self: stretch;
 }
 
 .btn-add:hover {
@@ -355,16 +326,16 @@ body {
 }
 
 .btn-back {
-  top: 0.6rem;
-  left: 0.6rem;
-  float: left;
-  height: 3.2rem;
+  position: absolute;
+  top: 0.8rem;
+  left: 0.8rem;
+  height: 2.4rem;
   aspect-ratio: 1;
   background-color: #fff;
   color: var(--color-background-500);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
   font-family: sans-serif;
-  font-size: 2.4rem;
+  font-size: 1.6rem;
   z-index: 999;
   display: flex;
   align-items: center;
@@ -460,7 +431,7 @@ body {
   }
 
   .box-header {
-    padding: 2.2rem 1.6rem 1.8rem;
+    padding: 2.4rem 1.6rem;
     border-radius: 0;
   }
 
@@ -486,4 +457,37 @@ SPACING SYSTEM (px)
 
 FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 /52 / 62 / 74 / 86 / 98
+*/
+
+/*
+FULL STAR
+
+<svg
+  xmlns="http://www.w3.org/2000/svg"
+  viewBox="0 0 20 20"
+  fill="#000"
+  stroke="#000"
+>
+  <path
+    d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+  />
+</svg>
+
+
+EMPTY STAR
+
+<svg
+  xmlns="http://www.w3.org/2000/svg"
+  fill="none"
+  viewBox="0 0 24 24"
+  stroke="#000"
+>
+  <path
+    strokeLinecap="round"
+    strokeLinejoin="round"
+    strokeWidth="{2}"
+    d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+  />
+</svg>
+
 */
